kubernetes/deployment.yaml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: frontend-deployment
  namespace: front
spec:
  replicas: 1
  selector:
    matchLabels:
      app: frontend
  template:
    metadata:
      labels:
        app: frontend
    spec:
      containers:
        - name: frontend-container
          image: somg0703/frontend
          ports:
            - containerPort: 5173

---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: backend-deployment
  namespace: back
spec:
  replicas: 1
  selector:
    matchLabels:
      app: backend
  template:
    metadata:
      labels:
        app: backend
    spec:
      containers:
        - name: backend-container
          image: somg0703/backend
          ports:
            - containerPort: 5000
